--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ on.  -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ascent Academy Calculator</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styless.css">
   </head>
   <body>
